part-5/505/pingpong/manifests/service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: pingpong
spec:
  template:
    metadata:
      name: pingpong-v1
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong-image
          resources:
            limits:
              cpu: "200m"
              memory: "100Mi"
          imagePullPolicy: Always
          image: PROJECT/IMAGE-PINGPONG
          envFrom:
            - secretRef:
                name: db-secret
          env:
            - name: HOST
              value: postgres-svc
