part-5/505/pingpong/manifests/route.yaml
apiVersion: serving.knative.dev/v1
kind: Route
metadata:
  name: pingpong-route
spec:
  traffic:
    - revisionName: pingpong-v1
      percent: 100
